# cipherscan-rust-crosslink

./: .gitignore  Cargo.toml  README.md  build.rs
deploy/: check-indexer-health.sh  cipherscan-rust-health.service  cipherscan-rust-health.timer  cipherscan-rust.service
proto/: indexer.proto
schema/: postgres.sql
schema/migrations/: 001_rust_indexer_support.sql  002_address_pagination_indexes.sql  003_fix_testnet_addresses.js  003_shielded_tx_query_index.sql  004_address_transactions_table.sql  004_backfill_address_transactions.js  005_cross_chain_swaps.sql  006_crosschain_materialized_views.sql  007_crosschain_raw_assets.sql  007_privacy_linkage_analytics.sql  008_crosslink_staking.sql  009_finality_status.sql  010_staking_amount.sql  011_finalizers.sql  012_divergence_events.sql  013_bft_pointer.sql
src/: config.rs  main.rs
src/db/: grpc.rs  mod.rs  postgres.rs  rocks.rs  rpc.rs
src/indexer/: blocks.rs  flows.rs  mod.rs  transactions.rs
src/models/: block.rs  flow.rs  mod.rs  transaction.rs
