[package]
name = "cipherscan-indexer-crosslink"
version = "0.1.0"
edition = "2021"
description = "CipherScan indexer for Zcash Crosslink feature net — fork of cipherscan-rust with VCrosslink transaction support"
authors = ["CipherScan"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
rocksdb = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Zcash parsing (from zebra-crosslink fork — includes VCrosslink tx support)
zebra-chain = { git = "https://github.com/ShieldedLabs/crosslink_monolith.git", rev = "d880b65" }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
sha2 = "0.10"
bs58 = "0.5"
base64 = "0.22"

# Environment
dotenvy = "0.15"

# HTTP client for RPC verification
reqwest = { version = "0.11", features = ["json"] }

# gRPC client for Zebra indexer streaming
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = true
